// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/popover/demo/arrow-point-at-center.md correctly 1`] = `
<div>
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Align edge / 边缘对齐
      </span>
    </button>
  </div>
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Arrow points to center / 箭头指向中心
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/popover/demo/basic.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Hover me
    </span>
  </button>
</div>
`;

exports[`renders ./components/popover/demo/control.md correctly 1`] = `
<div
  id="TriggerContainer"
>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</div>
`;

exports[`renders ./components/popover/demo/placement.md correctly 1`] = `
<div
  class="demo"
>
  <div
    style="margin-left:70px;white-space:nowrap;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          TL
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Top
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          TR
        </span>
      </button>
    </div>
  </div>
  <div
    style="width:70px;float:left;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          LT
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Left
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          LB
        </span>
      </button>
    </div>
  </div>
  <div
    style="width:70px;margin-left:304px;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          RT
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Right
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          RB
        </span>
      </button>
    </div>
  </div>
  <div
    style="margin-left:70px;clear:both;white-space:nowrap;"
  >
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          BL
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Bottom
        </span>
      </button>
    </div>
    <div
      id="TriggerContainer"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          BR
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders ./components/popover/demo/triggerType.md correctly 1`] = `
<div>
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Hover me
      </span>
    </button>
  </div>
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Focus me
      </span>
    </button>
  </div>
  <div
    id="TriggerContainer"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Click me
      </span>
    </button>
  </div>
</div>
`;
